from graph import Cube


class Scene:
    def __init__(self, cubes: list[Cube]):
        self.cubes = cubes
