@startuml
'https://plantuml.com/class-diagram

class Rasterizer {
    + draw(screen, scene, camera)
}

class Game {
    + loop()
}

class Scene {
    - objects
}

class Player {
    + get_camera() -> Vector
    + update(event)
    + move()
}

class Vector {
}

class Cube {
}

Game *--> Rasterizer : draw
Game *--> Scene : хранит
Game *--> Player : update, move, get_camera
Rasterizer o-> Scene : рисует
Scene <-* Player: манипулирует
Scene *--> Cube : хранит

@enduml